--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@heroicons/react": "^2.0.13",
     "@mui/material": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
-    "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -28,11 +27,12 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
     "typescript": "4.8.4",
     "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.50.5",
+    "@ubilabs/google-maps-react-hooks": "^2.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
