--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "dayjs": "^1.11.6",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
-    "framer-motion": "^7.6.9",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +31,7 @@
     "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/google.maps": "^3.50.5",
     "@ubilabs/google-maps-react-hooks": "^2.0.0",
     "autoprefixer": "^10.4.13",
